@startuml
set namespaceSeparator ::

class "hast_app::models::result_model.dart::ResultModel" {
  -QuizModel _quizModel
  +List<QuestionContent> questions
  +bool finished
  +int score
  +String text
  +void setModel()
}

"hast_app::models::result_model.dart::ResultModel" o-- "hast_app::models::quiz_model.dart::QuizModel"

class "hast_app::models::quiz_model.dart::QuizModel" {
  -QuizContent _quiz
  -int _questionNumber
  -List<QuestionContent> _questions
  +bool quizLoaded
  +List<QuestionContent> questions
  +QuestionContent currentQuestion
  +int currentNumber
  +int numberOfQuestions
  +bool finished
  +String title
  +String subAltText
  +List<String> subAlternatives
  +List<String> resultList
  +void loadQuiz()
  -void _reset()
  +void nextQuestion()
  +void prevQuestion()
  +void setQuestion()
  +void setAlternative()
  +void setSubAlternative()
}

"hast_app::models::quiz_model.dart::QuizModel" o-- "hast_app::common::quiz_content.dart::QuizContent"
"hast_app::models::quiz_model.dart::QuizModel" o-- "hast_app::common::question_content.dart::QuestionContent"
"flutter::src::foundation::change_notifier.dart::ChangeNotifier" <|-- "hast_app::models::quiz_model.dart::QuizModel"

class "hast_app::models::quiz_factory.dart::QuizFactory" {
  {static} +Future<String> getJson()
  {static} +Future<QuizContent> createQuiz()
}

class "hast_app::main.dart::MyApp" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::main.dart::MyApp"

class "hast_app::common::quiz_content.dart::QuizContent" {
  +String quizTitle
  +String quizInfo
  +List<String> resultText
  +List<QuestionContent> questions
  +String subAltText
  +List<String> subAlternatives
  +Map<String, dynamic> toJson()
}

class "hast_app::common::question_content.dart::QuestionContent" {
  +String question
  +List<String> alternatives
  -int _chAlt
  -int _chSAlt
  +int chosenAlternative
  +int chosenSubAlternative
  +Map<String, dynamic> toJson()
}

class "hast_app::screen::question_overview.dart::QuestionDrawer" {
  +Widget build()
  -Widget _buildQuestionDrawer()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::question_overview.dart::QuestionDrawer"

class "hast_app::screen::undefined_page.dart::UndefinedPage" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::undefined_page.dart::UndefinedPage"

class "hast_app::screen::responsive_page.dart::ResponsivePage" {
  +Widget largeScreen
  +Widget? mediumScreen
  +Widget? smallScreen
  {static} +bool isMediumScreen()
  {static} +bool isSmallScreen()
  {static} +bool isLargeScreen()
  +Widget build()
}

"hast_app::screen::responsive_page.dart::ResponsivePage" o-- "flutter::src::widgets::framework.dart::Widget"
"hast_app::screen::responsive_page.dart::ResponsivePage" o-- "flutter::src::widgets::framework.dart::Widget?"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::responsive_page.dart::ResponsivePage"

class "hast_app::screen::quiz_page.dart::QuizPage" {
  -Color _getColor()
  +Widget build()
  -Widget _subAlt()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::quiz_page.dart::QuizPage"

class "hast_app::screen::quiz_page.dart::_CreateProgressIndicators" {
  -QuizModel _model
  +Widget build()
  -Icon _getDotIcon()
  -List<Widget> _buildProgressIndicators()
}

"hast_app::screen::quiz_page.dart::_CreateProgressIndicators" o-- "hast_app::models::quiz_model.dart::QuizModel"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::quiz_page.dart::_CreateProgressIndicators"

class "hast_app::screen::quiz_page.dart::_CreateNextBackRow" {
  -QuizModel _model
  +Widget build()
}

"hast_app::screen::quiz_page.dart::_CreateNextBackRow" o-- "hast_app::models::quiz_model.dart::QuizModel"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::quiz_page.dart::_CreateNextBackRow"

class "hast_app::screen::quiz_page.dart::_CreateAnswers" {
  +QuestionContent question
  +Color Function(int, [int]) colorFunction
  +Widget build()
  -List<Widget> _buildAnswers()
}

"hast_app::screen::quiz_page.dart::_CreateAnswers" o-- "hast_app::common::question_content.dart::QuestionContent"
"hast_app::screen::quiz_page.dart::_CreateAnswers" o-- "hast_app::screen::quiz_page.dart::Color Function(int, [int])"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::quiz_page.dart::_CreateAnswers"

class "hast_app::screen::quiz_page.dart::_CreateFollowUpAnswers" {
  +Color Function(int, [int]) color
  +QuizModel model
  +QuestionContent question
  +Widget build()
  -List<Widget> _buildSubAlternatives()
}

"hast_app::screen::quiz_page.dart::_CreateFollowUpAnswers" o-- "hast_app::screen::quiz_page.dart::Color Function(int, [int])"
"hast_app::screen::quiz_page.dart::_CreateFollowUpAnswers" o-- "hast_app::models::quiz_model.dart::QuizModel"
"hast_app::screen::quiz_page.dart::_CreateFollowUpAnswers" o-- "hast_app::common::question_content.dart::QuestionContent"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::quiz_page.dart::_CreateFollowUpAnswers"

class "hast_app::screen::quiz_page.dart::_QuestionText" {
  +String qtext
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::quiz_page.dart::_QuestionText"

class "hast_app::screen::quiz_page.dart::_AlternativeText" {
  +String atext
  +int number
  +Color color
  +Widget build()
}

"hast_app::screen::quiz_page.dart::_AlternativeText" o-- "dart::ui::Color"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::quiz_page.dart::_AlternativeText"

class "hast_app::screen::quiz_page.dart::_SubAlternativeText" {
  +int index
  +Color color
  +String text
  +Widget build()
}

"hast_app::screen::quiz_page.dart::_SubAlternativeText" o-- "dart::ui::Color"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::quiz_page.dart::_SubAlternativeText"

class "hast_app::screen::home_page.dart::HomePage" {
  +String query
  +_HomePageState createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "hast_app::screen::home_page.dart::HomePage"

class "hast_app::screen::home_page.dart::_HomePageState" {
  +QuizContent quiz
  +bool isQuizLoaded
  +bool errorOccurred
  -String _infoHast
  -void _tryLoadingFile()
  +Widget build()
  -Widget _presentText()
  -Widget _homePageHomePage()
  -Widget _homePageAbout()
  -Widget _startButton()
}

"hast_app::screen::home_page.dart::_HomePageState" o-- "hast_app::common::quiz_content.dart::QuizContent"
"flutter::src::widgets::framework.dart::State" <|-- "hast_app::screen::home_page.dart::_HomePageState"

class "hast_app::screen::home_page.dart::HastLogo" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::home_page.dart::HastLogo"

class "hast_app::screen::result_page.dart::ResultPage" {
  +Widget build()
  -Widget _scrollButton()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::result_page.dart::ResultPage"

class "hast_app::screen::result_page.dart::_Embed" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::result_page.dart::_Embed"

class "hast_app::screen::result_page.dart::_PointsAndText" {
  -ResultModel _model
  +dynamic theme
  -int _score
  -String _scoreText
  -int _numberOfQuestions
  +Widget build()
}

"hast_app::screen::result_page.dart::_PointsAndText" o-- "hast_app::models::result_model.dart::ResultModel"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::result_page.dart::_PointsAndText"

class "hast_app::screen::result_page.dart::_ResultOverview" {
  -dynamic _theme
  -ResultModel _model
  -List<QuestionContent> _questions
  -int _questionNumber
  +Widget build()
}

"hast_app::screen::result_page.dart::_ResultOverview" o-- "hast_app::models::result_model.dart::ResultModel"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::result_page.dart::_ResultOverview"

class "hast_app::screen::result_page.dart::_HastButton" {
  -dynamic _theme
  -dynamic _text
  -dynamic _url
  -void _launchURL()
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::result_page.dart::_HastButton"

class "hast_app::screen::result_page.dart::_HomeButton" {
  -dynamic _theme
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "hast_app::screen::result_page.dart::_HomeButton"

class "hast_app::routing::routing_data.dart::RoutingData" {
  +String route
  -Map<String, String> _queryParameters
  +dynamic []()
}


@enduml